2012-12-03  Stas Boukarev  <stassats@gmail.com>

	* swank-backend.lisp (deinit-log-output): Move from swank-sbcl,
	use it on CCL in ccl:*save-exit-functions* as well.

	* swank-allegro.lisp (macroexpand-all): USe walk-form, not walk
	on >= 8.2.
	Patch by Utz-Uwe Haus.

2012-11-23  Stas Boukarev  <stassats@gmail.com>

	* slime.el (slime-edit-definition): Don't ask the user for a name
	to search if it's missing before running slime-edit-definition-hooks
	(slime-open-inspector): pop-to-buffer before inserting anything,
	otherwise the point is not moved into the desired position.

2012-11-13  Francois-Rene Rideau <tunes@google.com>

	* swank.lisp (*compile-file-for-emacs-hook*): A hook for
	compile-file-for-emacs, so that ASDF can hook its compilation
	functions.

2012-11-12  Stas Boukarev  <stassats@gmail.com>

	* swank.lisp (with-panic-handler): Abort the condition after
	closing the connection, otherwise it ends up in the slime debugger
	causing nested errors.

2012-11-11  Stas Boukarev  <stassats@gmail.com>

	* swank.lisp (interrupt-worker-thread): Solve *send-counter*
	binding problem.
	find-worker-thread: Merge with `thread-for-evaluation'.

2012-11-11  Helmut Eller  <heller@common-lisp.net>

	* slime.el ([test] find-definition.3): Mark as expected to fail.
	([test] arglist): Adjust regexp so that CCL passes.
	(slime-execute-tests): Insert summary table at the the end.
	(slime-check): Don't change counters here, as that would count
	multiple times per test.  Instead to the counting in
	slime-execute-tests.

2012-11-11  Helmut Eller  <heller@common-lisp.net>

	* swank-allegro.lisp (ldb-code-to-src-loc): Scan backward to the
	first code point with a non-nil start-char.
	(frame-package): Also match for ((:internal foo ...)).

2012-11-08  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-timer-call): Use debug marker in
	condition-case.

2012-11-02  Helmut Eller  <heller@common-lisp.net>

	* slime.el (find-definition.3): Fix syntax.
